--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@types/gsap": "^3.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
