--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start && npx prisma db push",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
