--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma db push"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
