--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tsparticles/slim": "^3.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/gsap": "^3.0.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,9 +38,11 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
