--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
