--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@getbrevo/brevo": "^2.2.0",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
     "@nextui-org/react": "^2.4.2",
