--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "iconsax-react": "^0.0.8",
     "matter-js": "^0.20.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
