--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gsap-trial": "^3.12.5",
     "iconsax-react": "^0.0.8",
     "matter-js": "^0.20.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "plyr": "^3.7.8",
@@ -41,6 +42,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
