--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
