--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@tabler/icons-react": "^3.7.0",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
@@ -38,6 +42,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "pdfjs-dist": "^3.4.120",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^18",
@@ -45,6 +50,7 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-pdf": "^9.1.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "sib-api-v3-sdk": "^8.5.0",
