--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@getbrevo/brevo": "^2.2.0",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.6.0",
+    "@next/third-parties": "^14.2.4",
     "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
