--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tsparticles/slim": "^3.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/gsap": "^3.0.0",
+    "@videojs/http-streaming": "^3.13.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -48,6 +49,7 @@
     "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
@@ -60,6 +62,10 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "video.js": "^8.16.1",
+    "videojs-contrib-quality-levels": "^4.1.0",
+    "videojs-http-source-selector": "^1.1.6",
+    "videojs-mobile-ui": "^1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -71,6 +77,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
+    "@types/videojs-mobile-ui": "^0.8.3",
     "bcryptjs": "^2.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
