--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-video-player": "^2.0.5",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
@@ -44,6 +46,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-cloudinary": "^6.6.2",
     "pdfjs-dist": "^3.4.120",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
