--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
+    "next-themes": "^0.3.0",
     "pdfjs-dist": "^3.4.120",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
