--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.2.12",
+    "fuse.js": "^7.0.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "iconsax-react": "^0.0.8",
