--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "videojs-contrib-quality-levels": "^4.1.0",
     "videojs-http-source-selector": "^1.1.6",
     "videojs-mobile-ui": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@prisma/client": "^5.16.1",
