--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "cloudinary-core": "^2.13.1",
     "cloudinary-video-player": "^2.0.5",
     "clsx": "^2.1.1",
