--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tsparticles/slim": "^3.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/gsap": "^3.0.0",
+    "@types/react-datepicker": "^7.0.0",
     "@videojs/http-streaming": "^3.13.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -54,6 +55,8 @@
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.0",
