--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@sentry/nextjs": "^8.26.0",
     "@tabler/icons-react": "^3.7.0",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
