--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@videojs/http-streaming": "^3.13.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
     "cloudinary-core": "^2.13.1",
@@ -83,6 +84,7 @@
   "devDependencies": {
     "@prisma/client": "^5.16.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/matter-js": "^0.19.6",
     "@types/node": "^20",
     "@types/react": "^18",
