--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "iconsax-react": "^0.0.8",
+    "lottie-react": "^2.4.0",
     "matter-js": "^0.20.0",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
@@ -89,6 +90,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "@types/videojs-mobile-ui": "^0.8.3",
