--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "recharts": "^2.12.7",
     "sib-api-v3-sdk": "^8.5.0",
     "swiper": "^11.1.4",
     "swr": "^2.2.5",
