--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/scroll-mode": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@sentry/nextjs": "^8.26.0",
     "@tabler/icons-react": "^3.7.0",
@@ -65,7 +66,7 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-pdf": "^9.1.0",
+    "react-pdf": "^9.1.1",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
