--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cloudinary-core": "^2.13.1",
     "cloudinary-video-player": "^2.0.5",
     "clsx": "^2.1.1",
+    "crypto-hash": "^3.1.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.2.12",
