--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fuse.js": "^7.0.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "matter-js": "^0.20.0",
