--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@next/third-parties": "^14.2.4",
     "@nextui-org/react": "^2.4.2",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -87,7 +88,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.21.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/canvas-confetti": "^1.6.4",
     "@types/matter-js": "^0.19.6",
