--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
     "crons": [
       {
         "path": "/api/leaderboard",
-        "schedule": "45 15 * * 4",
-        "headers": {
-          "authorization": "@CRON_SECRET" 
-        }
+        "schedule": "45 15 * * 4"
       }
     ]
   }
