--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
