--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.2.12",
     "fuse.js": "^7.0.0",
     "gsap": "^3.12.5",
